(commit to 'main'')

--- a/src/views/authuser.hbs
+++ b/src/views/authuser.hbs
@@ -32,7 +32,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Welcome to <Wobot class="ai!"></Wobot></h1>
+                            <h1 class="mb-5">Welcome to Wobot.ai <Wobot class="ai!"></Wobot></h1>
                          
                             <form class="form-subscribe" id="contactForm" data-sb-form-api-token="API_TOKEN">
                                 <!-- Email address input-->
